# bookkeeper-agent

./: .env.example  .gitattributes  .gitignore  SECURITY.md  clients.example.toml  pyproject.toml
.githooks/: pre-commit
docs/: make_setup_pdf.py
docs/superpowers/plans/: 2026-06-11-bookkeeper-agent-ws-a-foundations.md  2026-06-11-bookkeeper-agent-ws-b1-connector-contracts.md  2026-06-11-bookkeeper-agent-ws-b3-qbo.md  2026-06-11-bookkeeper-agent-ws-b4-slack.md  2026-06-11-bookkeeper-agent-ws-c1-llm-seam.md  2026-06-11-bookkeeper-agent-ws-c2-prescreen-and-pending.md  2026-06-11-bookkeeper-agent-ws-c3-propose-pipeline.md  2026-06-11-bookkeeper-agent-ws-c4-write-gate.md
src/bookkeeper_agent/: __main__.py  app.py  audit.py  clients.py  config.py  costs.py  qbo_connect.py  runner.py  secret_scan.py  security.py
tests/: conftest.py  test_anthropic_llm_client.py  test_app.py  test_audit.py  test_checkpoint_repo.py  test_clients.py  test_config.py  test_connector_conformance.py  test_connector_types.py  test_costs.py  test_db_models.py  test_decimal_text.py  test_fake_email.py  test_fake_llm.py  test_fake_qbo.py  test_fake_slack.py  test_intake.py  test_llm_types.py  test_no_committed_secrets.py  test_pending_models.py  test_pending_repo.py  test_prescreen.py  test_process_pipeline.py  test_qbo_connect.py  test_qbo_history.py  test_qbo_http.py  test_qbo_oauth.py  test_qbo_tokens.py  test_runner.py  test_secret_scan.py  test_security.py  test_slack_blocks.py  test_slack_drop.py  test_slack_events.py  test_slack_http.py  test_smoke.py  test_token_store.py  test_write_gate.py
(+24 files in other folders)
