[project]
name = "bookkeeper-agent"
version = "0.1.0"
description = "Internal Claude-powered AP/bookkeeping agent (bills -> QBO, Slack-approved)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49",
    "SQLAlchemy>=2.0",
    "cryptography>=42",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
